      does not supply any arguments no longer results in an Internal
      Server Error.  The repository can be configured to send email to
      an email address with debugging information. (CNY-1142)
    * When checking to make sure that the URL used to upload a
      changeset matches the repository base URL, both URLs are now
      normalized before the comparison is made. (CNY-1140)

  o Internal changes:
    * Conary now supports being built against an internal copy of the
      sqlite3 library for cases when the system sqlite3 is not the
      optimal version for Conary.
    * The repository schema's string types are no longer restricted to
      arbitrary sizes for backends that support indexing larger strings
      than MySQL's InnoDB storage engine. (CNY-1054)

Changes in 1.0.40:
  o Build Changes:
    * All files in "binary directories" now provide their path as a
      file: dependency. This allows more flexibility for files that
      have requirements such as "file: /usr/bin/cp". (CNY-930)
    * A addRemoveRedirect() method has been added to the
      RedirectRecipe class to allow redirecting packages to nothing
      (which causes them to be erased on update). The client code has
      been updated to remove package components properly for this
      case.  (CNY-764)

  o Bug Fixes:
    * Config files, though added to the :config component by default
      (CNY-172), can now be appropriately overridden by
      ComponentSpec. (CNY-1107)
    * ELF files that have no DT_NEEDED or DT_SONAME entries no longer
      cause Conary to trace back attempting to discover the ELF
      ABI. (CNY-1072)
    * Conary will no longer attempt to update troves in the namespace
      "local" when using updateall.
    * Redirect recipes which contain conflicting redirects now give an
      error message instead of a traceback. (CNY-449)
    * The previous fix for CNY-699 wrongly encoded the soname rather
      than the filename in provisions for symbolic links to shared